--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.15",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.0",
     "express": "^5.1.0",
     "node-fetch": "^3.3.2",
+    "openai": "^5.10.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
